chore(likes): add route to check if user like an event
